tests/semantic/extended_subtypes2/extended_subtypes2.err
Error: Infinite descent in the definition of type X in file extended_subtypes2.dl at line 15
.type X <: X
^------------
Error: Infinite descent in the definition of type A in file extended_subtypes2.dl at line 17
.type A <: B
^------------
Error: Infinite descent in the definition of type B in file extended_subtypes2.dl at line 18
.type B <: A
^------------
Error: Undefined base type Z in definition of type Y in file extended_subtypes2.dl at line 23
.type Y <: Z
^------------
4 errors generated, evaluation aborted
